# fastapi-app

./: pyproject.toml
app/: .env.template  main.py
app/actions/: superuser.py
app/alembic/versions/: 2024_11_24_1610-f1384b883e9e_create_users.py  2024_11_24_1949-d0ee42901742_create_access_tokens.py  2024_11_25_2221-fad50d3f31ef_change_user_model.py  2024_11_28_2049-361c3ffdfc50_change_user_table.py
app/api/api_v1/: __init__.py  auth.py  fastapi_users_routers.py  users.py
app/api/dependencies/: auth_strategy.py  backend.py  users.py
app/api/dependencies/auth/: access_tokens.py  auth_strategy.py  fastapi_users_routers.py  user_manager.py
app/core/: config.py
app/core/auth/: transport.py  user_manager.py
app/core/models/: access_token.py  base.py  db_helper.py  user.py
app/core/schemas/: user.py
app/crud/: users.py
