[tool.poetry]
package-mode = false

name = "task-list"
version = "0.1.0"
description = ""
authors = ["Nasakin Artem <artnas379@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
